# System-programming-C-Assignments

multy process search engine/: CMakeLists.txt  List.cpp  List.h  Makefile  README.txt  Trie.cpp  Trie.h  docfile  executor_fifos.h  jobExecutor_main.cpp  main.h  stats.sh  worker_fifos.h  worker_main.cpp
multy process search engine/datasets/d2/: input.txt
multy process search engine/datasets/d5/: input.txt
search engine/: List.cpp  List.h  Makefile  README.md  Trie.cpp  Trie.h  main.cpp  main.h  util.cpp  util.h
webserver & crawler/: List.cpp  List.h  Makefile  MyCrawler.cpp  README.txt  Server.cpp  web_creator.sh
webserver & crawler/datasets/: random_words.txt
